--- a/res/menu/payment.xml
+++ b/res/menu/payment.xml
@@ -2,9 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_logout"
+        android:id="@+id/action_tiep"
         android:orderInCategory="100"
-        android:title="@string/action_logout"
-        android:visible="false"
-        app:showAsAction="never" />
+        android:title="Tiếp"
+        app:showAsAction="ifRoom" />
 </menu>
