--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -9,4 +9,22 @@
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="profile_width">60dp</dimen>
     <dimen name="profile_height">60dp</dimen>
+    
+    <dimen name="textsize_normal_keyin">16sp</dimen>
+	<dimen name="textsize_normal_keyin_title">14sp</dimen>
+	
+	<!-- Text size -->
+    <dimen name="textsize10">10sp</dimen>
+    <dimen name="textsize12">12sp</dimen>
+    <dimen name="textsize14">14sp</dimen>
+    <dimen name="textsize15">15sp</dimen>
+    <dimen name="textsize16">16sp</dimen>
+    <dimen name="textsize17">17sp</dimen>
+    <dimen name="textsize18">18sp</dimen>
+    <dimen name="textsize20">20sp</dimen>
+    <dimen name="textsize22">22sp</dimen>
+    <dimen name="textsize25">25sp</dimen>
+    <dimen name="textsize30">30sp</dimen>
+    <dimen name="textsize36">36sp</dimen>
+	
 </resources>
