--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -18,4 +18,15 @@
     <style name="DialogStyle" parent="android:style/Theme.Dialog">
         <item name="android:windowBackground">@android:color/transparent</item>
     </style>
+    
+    <style name="AppTheme2" parent="@style/Theme.AppCompat.Light">
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+        <item name="android:statusBarColor">@color/red_dark</item>
+        <item name="colorPrimary">@color/red</item>
+        <!-- darker variant for the status bar and contextual app bars -->
+        <item name="colorPrimaryDark">@color/red_dark</item>
+        <!-- theme UI controls like checkboxes and text fields -->
+        <item name="colorAccent">@color/white</item>
+    </style>
 </resources>
