--- a/res/layout/app_bar_main.xml
+++ b/res/layout/app_bar_main.xml
@@ -33,7 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        app:backgroundTint="@color/green_light"
+        app:backgroundTint="@color/red"
         app:srcCompat="@drawable/icon_aff_cashpaid" />
 
 </android.support.design.widget.CoordinatorLayout>
