--- a/res/layout/fragment_home.xml
+++ b/res/layout/fragment_home.xml
@@ -37,7 +37,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
-                        android:background="@color/blue_light"
+                        android:background="@color/blue_light_trans"
                         android:gravity="center"
                         android:paddingTop="7dp"
                         android:paddingBottom="7dp"
@@ -50,7 +50,7 @@
                         android:layout_height="match_parent"
                         android:layout_marginLeft="2dp"
                         android:layout_weight="1"
-                        android:background="@color/blue_light"
+                        android:background="@color/blue_light_trans"
                         android:gravity="center"
                         android:paddingTop="7dp"
                         android:paddingBottom="7dp"
@@ -63,7 +63,7 @@
                         android:layout_height="match_parent"
                         android:layout_marginLeft="2dp"
                         android:layout_weight="1"
-                        android:background="@color/blue_light"
+                        android:background="@color/blue_light_trans"
                         android:gravity="center"
                         android:paddingTop="7dp"
                         android:paddingBottom="7dp"
@@ -76,7 +76,7 @@
                         android:layout_height="match_parent"
                         android:layout_marginLeft="2dp"
                         android:layout_weight="1"
-                        android:background="@color/blue_light"
+                        android:background="@color/blue_light_trans"
                         android:gravity="center"
                         android:paddingTop="7dp"
                         android:paddingBottom="7dp"
