--- a/res/layout/fragment_info_contract.xml
+++ b/res/layout/fragment_info_contract.xml
@@ -88,6 +88,8 @@
                 android:layout_marginRight="10dp"
                 android:paddingLeft="5dp"
                 android:paddingRight="5dp"
+                android:paddingTop="10dp"
+                android:paddingBottom="20dp"
                 android:clipToPadding="false"
                 android:divider="@android:color/transparent" />
 
