--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -12,10 +12,13 @@
     <color name="blue">#2196F3</color>
     <color name="blue_dark">#1976D2</color>
     <color name="blue_light">#42A5F5</color>
+    <color name="blue_light_trans">#D942A5F5</color>
     
     <color name="red_dark">#cc1111</color>
     <color name="red">#ee1111</color>
     <color name="red_light">#FF1111</color>
+    
+    <color name="bonusprogram_bg">#B3FF1111</color>
     
     <color name="white">#FFFFFF</color>
     
@@ -25,6 +28,8 @@
     <color name="grey_light">#BDBDBD</color>
     <color name="grey_dark">#616161</color>
     <color name="gray">#D4D4D4</color>
+    
+    <color name="contract_detail_header_bg">#E0E0E0</color>
     
     <color name="orange">#FF5722</color>
     <color name="orange_dark">#E64A19</color>
