--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -6,16 +6,22 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    
     <dimen name="fab_margin">16dp</dimen>
+    
     <dimen name="profile_width">60dp</dimen>
     <dimen name="profile_height">60dp</dimen>
+    
+    <dimen name="activity_contract_detail_margin">7dp</dimen>
     
     <dimen name="textsize_normal_keyin">16sp</dimen>
 	<dimen name="textsize_normal_keyin_title">14sp</dimen>
 	
+	<dimen name="minwidth_tv120">120dp</dimen>
 	<!-- Text size -->
     <dimen name="textsize10">10sp</dimen>
     <dimen name="textsize12">12sp</dimen>
+    <dimen name="textsize13">13sp</dimen>
     <dimen name="textsize14">14sp</dimen>
     <dimen name="textsize15">15sp</dimen>
     <dimen name="textsize16">16sp</dimen>
