--- a/res/values/color.xml
+++ b/res/values/color.xml
@@ -42,5 +42,15 @@
     <color name="light_grey">#F0F0F0</color>
     <color name="dark_grey">#464545</color>
     <color name="medium_grey">#B3B3B3</color>
+    
+    <!-- Colors of indicator -->
+    <color name="si_default_text_color">#FF0000</color>
+    <color name="si_default_text_color_selected">#FF00FF</color>
+	<color name="si_default_indicator_bg">#ee9999</color>
+	
+	<color name="indicator_1">#55B3C2</color>
+    <color name="indicator_2">#64A4A4</color>
+    <color name="indicator_3">#66D7B9</color>
+	<color name="indicator_4">#FDBC7D</color>
 
 </resources>
