--- a/res/layout/fragment_home.xml
+++ b/res/layout/fragment_home.xml
@@ -1,5 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -23,30 +24,59 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="180dp"
+                    android:layout_height="200dp"
                     android:background="@color/red"
+                    android:gravity="center_horizontal"
                     android:orientation="vertical" >
-                    
+
+                    <ImageView
+                        android:id="@+id/imvProfile"
+                        android:layout_width="@dimen/profile_width"
+                        android:layout_height="@dimen/profile_height"
+                        android:layout_marginTop="20dp"
+                        android:src="@drawable/avatar_user" />
+
+                    <TextView
+                        android:id="@+id/tvWelcome"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="5dp"
+                        android:text="Chào mừng Nguyen Van Nam"
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/textsize14"
+                        android:textStyle="bold"
+                        android:typeface="sans" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="20dp"
+                        android:layout_marginRight="20dp"
+                        android:padding="5dp"
+                        android:text="Anh/chị có thể dễ dàng tra cứu thông tin hợp đồng bảo hiểm nhân thọ, thông tin điểm thưởng tích lũy của mình."
+                        android:textColor="@color/white"
+                        android:textSize="@dimen/textsize12" />
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
-                    android:orientation="vertical"
+                    android:layout_height="220dp"
                     android:layout_alignParentBottom="true"
                     android:layout_marginLeft="15dp"
                     android:layout_marginRight="15dp"
                     android:layout_marginTop="160dp"
-                    android:background="@drawable/st_bg_page_home" >
+                    android:background="@drawable/st_bg_page_home"
+                    android:orientation="vertical" >
 
                     <com.dlvn.mcustomerportal.view.indicator.ScrollerViewPager
                         android:id="@+id/view_pager"
                         android:layout_width="match_parent"
-                        android:layout_height="0dp"
-                        android:layout_weight="1"
-                        android:layout_gravity="center" />
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_weight="1" />
 
-                    <com.dlvn.mcustomerportal.view.indicator.SpringIndicator
+                    <!--
+                         <com.dlvn.mcustomerportal.view.indicator.SpringIndicator
                         xmlns:app="http://schemas.android.com/apk/res-auto"
                         android:id="@+id/indicator"
                         android:layout_width="match_parent"
@@ -59,82 +89,144 @@
                         app:siSelectedTextColor="@android:color/white"
                         app:siTextColor="@color/colorPrimaryDark"
                         app:siTextSize="10sp" />
+                    -->
+
+                    <com.dlvn.mcustomerportal.view.indicator.CirclePageIndicator
+                        android:id="@+id/indicator"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="5dp"
+                        app:centered="true" />
                 </LinearLayout>
             </RelativeLayout>
 
             <!-- Layout header home origin -->
 
-            <RelativeLayout
+            <ImageView
+                android:id="@+id/imv_ads"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:padding="5dp" >
+                android:layout_gravity="center" />
 
-                <ImageView
-                    android:id="@+id/imv_ads"
+            <!-- layout quảng cáo CTBH -->
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:orientation="vertical"
+                android:padding="10dp" >
+
+                <!-- QC1 -->
+
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center" />
+                    android:layout_height="100dp"
+                    android:background="@drawable/st_bg_layout"
+                    android:elevation="3dp"
+                    android:orientation="vertical" >
 
-                <LinearLayout
-                    android:id="@+id/lloMenu"
+                    <ImageView
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:alpha="0.3"
+                        android:background="@drawable/img_dai_ichi_life"
+                        android:backgroundTintMode="multiply" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="5dp"
+                        android:capitalize="sentences"
+                        android:text="PHÍ ĐỊNH KỲ TỪ 499,000/THÁNG"
+                        android:textColor="@color/dark_grey"
+                        android:textSize="@dimen/textsize12"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="40dp"
+                        android:capitalize="sentences"
+                        android:text="GÓI AN NHÀN HƯU TRÍ"
+                        android:textColor="@color/dark_grey"
+                        android:textSize="@dimen/textsize16"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="60dp"
+                        android:capitalize="sentences"
+                        android:text="Hãy đăng ký ngay hôm nay. Hỗ trợ tự động đóng phí qua thẻ."
+                        android:textColor="@color/dark_grey"
+                        android:textSize="@dimen/textsize12" />
+                </RelativeLayout>
+
+                <!-- QC2 -->
+
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:orientation="horizontal" >
+                    android:layout_height="100dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/st_bg_layout"
+                    android:elevation="3dp"
+                    android:orientation="vertical" >
 
-                    <TextView
+                    <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        android:background="@color/blue_light_trans"
-                        android:gravity="center"
-                        android:paddingBottom="7dp"
-                        android:paddingTop="7dp"
-                        android:text="Tin tức "
-                        android:textColor="@color/white"
+                        android:alpha="0.3"
+                        android:background="@drawable/phieu_kiem_tra_y_te"
+                        android:backgroundTintMode="multiply" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="5dp"
+                        android:capitalize="sentences"
+                        android:text="CHỈ TỪ 199,000 ĐẾN 399,000 HÀNG THÁNG"
+                        android:textColor="@color/dark_grey"
+                        android:textSize="@dimen/textsize12"
                         android:textStyle="bold" />
 
                     <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="2dp"
-                        android:layout_weight="1"
-                        android:background="@color/blue_light_trans"
-                        android:gravity="center"
-                        android:paddingBottom="7dp"
-                        android:paddingTop="7dp"
-                        android:text="Sản phẩm "
-                        android:textColor="@color/white"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="40dp"
+                        android:capitalize="sentences"
+                        android:text="GÓI CHĂM SÓC SỨC KHỎE Y TẾ"
+                        android:textColor="@color/dark_grey"
+                        android:textSize="@dimen/textsize16"
                         android:textStyle="bold" />
 
                     <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="2dp"
-                        android:layout_weight="1"
-                        android:background="@color/blue_light_trans"
-                        android:gravity="center"
-                        android:paddingBottom="7dp"
-                        android:paddingTop="7dp"
-                        android:text="Thanh toán "
-                        android:textColor="@color/white"
-                        android:textStyle="bold" />
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="60dp"
+                        android:capitalize="sentences"
+                        android:text="Chăm sóc sức khỏe của bạn mỗi ngày.Phòng ngừa mọi nguy cơ bệnh tật."
+                        android:textColor="@color/dark_grey"
+                        android:textSize="@dimen/textsize12" />
+                </RelativeLayout>
+            </LinearLayout>
 
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginLeft="2dp"
-                        android:layout_weight="1"
-                        android:background="@color/blue_light_trans"
-                        android:gravity="center"
-                        android:paddingBottom="7dp"
-                        android:paddingTop="7dp"
-                        android:text="Liên hệ "
-                        android:textColor="@color/white"
-                        android:textStyle="bold" />
-                </LinearLayout>
-            </RelativeLayout>
+            <!-- layout transaction -->
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/st_bg_page_home"
+                android:orientation="vertical" >
+            </LinearLayout>
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rvContent"
