--- a/res/layout/item_page_home.xml
+++ b/res/layout/item_page_home.xml
@@ -7,12 +7,14 @@
     android:padding="5dp" >
 
     <TextView
+        android:id="@+id/tvMaHopDong"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Mã hợp đồng 00076589"
         android:textSize="@dimen/textsize13" />
 
     <TextView
+        android:id="@+id/tvTongPhiDaDong"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
@@ -23,45 +25,95 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="giá trị hiện tại"
+        android:text="Tổng phí bảo hiểm đã đóng"
+        android:textColor="@color/gray"
         android:textSize="@dimen/textsize10" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal" >
 
-        <TextView
-            android:id="@+id/tvTitle"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
-            android:padding="5dp"
-            android:text="1,500,000"
-            android:textColor="@color/red"
-            android:textStyle="bold" />
+            android:gravity="center_horizontal"
+            android:orientation="vertical" >
 
-        <TextView
-            android:id="@+id/tvContent"
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Phí cơ bản"
+                android:textColor="@color/gray"
+                android:textSize="@dimen/textsize10" />
+
+            <TextView
+                android:id="@+id/tvPhiCoBan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="1,500,000"
+                android:textColor="@color/red"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tvNgayDongPhi"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="Ngày đóng 12/10/2017"
+                android:textColor="@color/gray"
+                android:textSize="@dimen/textsize12"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="0.5"
-            android:gravity="right"
-            android:padding="5dp"
-            android:text="80 ngày"
-            android:textColor="@color/red"
-            android:textStyle="bold" />
+            android:gravity="center_horizontal"
+            android:orientation="vertical" >
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Ngày gia hạn"
+                android:textColor="@color/gray"
+                android:textSize="@dimen/textsize10" />
+
+            <TextView
+                android:id="@+id/tvNgayGiaHan"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="12/12/2017"
+                android:textColor="@color/red"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/tvNgayConLai"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:text="còn 10 ngày"
+                android:textColor="@color/gray"
+                android:textSize="@dimen/textsize12"
+                android:textStyle="bold" />
+        </LinearLayout>
     </LinearLayout>
 
     <Button
-        android:layout_width="match_parent"
+        android:id="@+id/btnChiTiet"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:background="@drawable/state_btn_page_home"
-        android:textColor="@color/white"
-        android:layout_marginTop="20dp"
+        android:paddingLeft="40dp"
+        android:paddingRight="40dp"
+        android:text="Xem chi tiết"
         android:textAllCaps="false"
-        android:layout_marginLeft="30dp"
-        android:layout_marginRight="30dp"
-        android:text="Xem chi tiết" />
+        android:textColor="@color/white" />
 
 </LinearLayout>
