--- a/res/layout/fragment_bonus_program.xml
+++ b/res/layout/fragment_bonus_program.xml
@@ -9,6 +9,7 @@
         android:id="@+id/rvContent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="30dp"
         android:background="@color/white" />
 
 </LinearLayout>
