--- a/res/layout/item_notification.xml
+++ b/res/layout/item_notification.xml
@@ -13,6 +13,17 @@
         android:orientation="vertical" >
 
         <TextView
+            android:id="@+id/tvStatus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginTop="5dp"
+            android:textColor="@color/white"
+            android:background="@drawable/state_btn_page_home"
+            android:text="new"
+            android:textSize="@dimen/textsize12" />
+
+        <TextView
             android:id="@+id/tvName"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -27,7 +38,7 @@
             android:layout_marginTop="5dp"
             android:gravity="right"
             android:text="2017/2/3"
-            android:textSize="12sp" />
+            android:textSize="@dimen/textsize12" />
     </LinearLayout>
 
 </RelativeLayout>
